deploy/kubernetes/base/networking/policy/edgeapi.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: edgeapi
spec:
  podSelector:
    matchLabels:
      app: edgeapi
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 8080

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: productcatalogservice
      ports:
        - protocol: TCP
          port: 3550

    - to:
        - podSelector:
            matchLabels:
              app: currencyservice
      ports:
        - protocol: TCP
          port: 7000

    - to:
        - podSelector:
            matchLabels:
              app: cartservice
      ports:
        - protocol: TCP
          port: 7070

    - to:
        - podSelector:
            matchLabels:
              app: recommendationservice
      ports:
        - protocol: TCP
          port: 8080

    - to:
        - podSelector:
            matchLabels:
              app: checkoutservice
      ports:
        - protocol: TCP
          port: 5050

    - to:
        - podSelector:
            matchLabels:
              app: shippingservice
      ports:
        - protocol: TCP
          port: 50051

    - to:
        - podSelector:
            matchLabels:
              app: adservice
      ports:
        - protocol: TCP
          port: 9555

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
